# Resume_Analyzer_v2

./: README.md  pyproject.toml
db/: chroma.sqlite3
src/resume_analyzer_v3/: crew.py  main.py
src/resume_analyzer_v3/config/: agents.yaml  tasks.yaml
